--- a/client/src/stylesheets/ThreadBox.css
+++ b/client/src/stylesheets/ThreadBox.css
@@ -13,7 +13,7 @@
 }
 
 #user {
-	color: #666;
+	color: #444;
 }
 
 #category {
